--- a/public/compra.html
+++ b/public/compra.html
@@ -17,6 +17,10 @@
 <div class="header">
     <h1 class="header h1">panaderia desesperanza</h1>
 </div>
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<div class="header">
+    <h1 class="header h1">panaderia desesperanza</h1>
+</div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <div class="container-fluid">
 
@@ -34,21 +38,67 @@
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-        <li class="nav-item">
-          <button class="btn-modal" commandfor="si" command="show-modal" type="submit">Inicio de sesión</button>
+<!-- BOTONES EN NAV (abre directamente cada modal) -->
+<li class="nav-item">
+  <button class="btn-modal" data-open="modal-login" type="button">Inicio de sesión</button>
+</li>
+<li class="nav-item">
+  <button class="btn-modal" data-open="modal-registro" type="button">Registrar</button>
 </li>
 
-<dialog id="si">
-    <h2>Inicio de Sesión</h2>
-    <form method="dialog">
-        <label>Usuario:</label>
-        <input type="text" title="Ingresa tu nombre de usuario"><br><br>
-        <label>Contraseña:</label>
-        <input type="password" title="Ingresa tu contraseña"><br><br>
-        <input type="submit">
-        <button class="btn-modal" id="btn-cerrar-modal">Cerrar</button>
-    </form>
+<!-- MODAL LOGIN (NO anidar) -->
+<dialog id="modal-login">
+  <h2>Inicio de Sesión</h2>
+
+  <form id="loginForm">
+    <label for="login-email">Correo electrónico:</label>
+    <input type="email" id="login-email" name="email" required><br><br>
+
+    <label for="login-password">Contraseña:</label>
+    <input type="password" id="login-password" name="password" required><br><br>
+
+    <button type="submit">Ingresar</button>
+  </form>
+
+  <p style="margin-top: 10px;">
+    ¿No tienes cuenta?
+    <a href="#" id="link-abrir-registro">Regístrate aquí</a>
+  </p>
+
+  <button class="btn-modal cerrar-btn" data-close="modal-login" type="button">Cerrar</button>
 </dialog>
+
+<!-- MODAL REGISTRO (NO anidar) -->
+<dialog id="modal-registro">
+  <h2>Registro de Usuario</h2>
+
+  <form id="registroForm">
+    <label for="reg-nombre">Nombre:</label>
+    <input type="text" id="reg-nombre" name="nombre" required><br><br>
+
+    <label for="reg-email">Correo electrónico:</label>
+    <input type="email" id="reg-email" name="email" required><br><br>
+
+    <label for="reg-password">Contraseña:</label>
+    <input type="password" id="reg-password" name="password" required><br><br>
+
+    <label for="reg-rol">Rol:</label>
+    <select id="reg-rol" name="rol">
+      <option value="cliente">Cliente</option>
+      <option value="admin">Admin</option>
+    </select><br><br>
+
+    <button type="submit">Registrar</button>
+  </form>
+
+  <p style="margin-top: 10px;">
+    ¿Ya tienes cuenta?
+    <a href="#" id="link-abrir-login">Inicia sesión</a>
+  </p>
+
+  <button class="btn-modal cerrar-btn" data-close="modal-registro" type="button">Cerrar</button>
+</dialog>
+
         </li>
 
         <li class="nav-item">
@@ -76,7 +126,6 @@
     </div>
   </div>
 </nav>
-
     <div class="container">
 	<div class="snowflakes" aria-hidden="true">
 		<div class="snowflake">
