--- a/public/perfil.html
+++ b/public/perfil.html
@@ -13,38 +13,81 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<div class="header">
+    <h1 class="header h1">panaderia desesperanza</h1>
+</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <div class="container-fluid">
-
     <a class="navbar-brand" href="#">Panadería</a>
-
     <!-- botón hamburguesa -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <!-- CONTENIDO DEL NAV -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+<!-- BOTONES EN NAV (abre directamente cada modal) -->
         <li class="nav-item">
-          <button class="btn-modal" commandfor="si" command="show-modal" type="submit">Inicio de sesión</button>
+  <button class="btn-modal" data-open="modal-login" type="button">Inicio de sesión</button>
+</li>
+        <li class="nav-item">
+  <button class="btn-modal" data-open="modal-registro" type="button">Registrar</button>
 </li>
 
-<dialog id="si">
-    <h2>Inicio de Sesión</h2>
-    <form method="dialog">
-        <label>Usuario:</label>
-        <input type="text" title="Ingresa tu nombre de usuario"><br><br>
-        <label>Contraseña:</label>
-        <input type="password" title="Ingresa tu contraseña"><br><br>
-        <input type="submit">
-        <button class="btn-modal" id="btn-cerrar-modal">Cerrar</button>
-    </form>
+        <!-- MODAL LOGIN (NO anidar) -->
+        <dialog id="modal-login">
+  <h2>Inicio de Sesión</h2>
+
+  <form id="loginForm">
+    <label for="login-email">Correo electrónico:</label>
+    <input type="email" id="login-email" name="email" required><br><br>
+
+    <label for="login-password">Contraseña:</label>
+    <input type="password" id="login-password" name="password" required><br><br>
+
+    <button type="submit">Ingresar</button>
+  </form>
+
+  <p style="margin-top: 10px;">
+    ¿No tienes cuenta?
+    <a href="#" id="link-abrir-registro">Regístrate aquí</a>
+  </p>
+
+  <button class="btn-modal cerrar-btn" data-close="modal-login" type="button">Cerrar</button>
+        </dialog>
+<!-- MODAL REGISTRO (NO anidar) -->
+        <dialog id="modal-registro">
+    <h2>Registro de Usuario</h2>
+
+<form id="registroForm">
+    <label for="reg-nombre">Nombre:</label>
+    <input type="text" id="reg-nombre" name="nombre" required><br><br>
+
+    <label for="reg-email">Correo electrónico:</label>
+    <input type="email" id="reg-email" name="email" required><br><br>
+    <label for="reg-password">Contraseña:</label>
+    <input type="password" id="reg-password" name="password" required><br><br>
+
+    <label for="reg-rol">Rol:</label>
+    <select id="reg-rol" name="rol">
+      <option value="cliente">Cliente</option>
+      <option value="admin">Admin</option>
+    </select><br><br>
+
+    <button type="submit">Registrar</button>
+  </form>
+
+  <p style="margin-top: 10px;">
+    ¿Ya tienes cuenta?
+    <a href="#" id="link-abrir-login">Inicia sesión</a>
+  </p>
+
+  <button class="btn-modal cerrar-btn" data-close="modal-registro" type="button">Cerrar</button>
 </dialog>
+
         </li>
 
         <li class="nav-item">
