--- a/public/perfil.html
+++ b/public/perfil.html
@@ -56,7 +56,7 @@
     <a href="#" id="link-abrir-registro">Regístrate aquí</a>
   </p>
 
-  <button class="btn-modal cerrar-btn" data-close="modal-login" type="button">Cerrar</button>
+  <button class="btn-modal cerrar-btn btn-x" data-close="modal-login" type="button">X</button>
         </dialog>
 <!-- MODAL REGISTRO (NO anidar) -->
         <dialog id="modal-registro">
@@ -85,7 +85,7 @@
     <a href="#" id="link-abrir-login">Inicia sesión</a>
   </p>
 
-  <button class="btn-modal cerrar-btn" data-close="modal-registro" type="button">Cerrar</button>
+  <button class="btn-modal cerrar-btn btn-x" data-close="modal-registro" type="button">X</button>
 </dialog>
 
         </li>
