--- a/public/perfil.html
+++ b/public/perfil.html
@@ -59,7 +59,7 @@
   <button class="btn-modal cerrar-btn btn-x" data-close="modal-login" type="button">X</button>
         </dialog>
 <!-- MODAL REGISTRO (NO anidar) -->
-        <dialog id="modal-registro">
+ <dialog id="modal-registro">
     <h2>Registro de Usuario</h2>
 
 <form id="registroForm">
@@ -157,5 +157,89 @@
 	</div>
     </div>
 	<script src="script.js"></script>
+
+    <script>
+/* ----- configuración: tiempo de la animación (ms) ----- */
+const ANIM_MS = 300;
+
+/* ----- helpers de animación ----- */
+function abrirModal(modal) {
+  modal.classList.remove("cerrando");
+  // showModal puede tirar en navegadores que no soportan dialog nativo,
+  // pero asumimos compatibilidad moderna
+  modal.showModal();
+}
+
+function cerrarModalConAnimacion(modal, callback) {
+  modal.classList.add("cerrando");
+  setTimeout(() => {
+    try { modal.close(); } catch(e) {}
+    modal.classList.remove("cerrando");
+    if (typeof callback === "function") callback();
+  }, ANIM_MS);
+}
+
+/* ----- elementos ----- */
+const botonesAbrir = document.querySelectorAll("[data-open]");
+const botonesCerrar = document.querySelectorAll(".cerrar-btn");
+const loginModal = document.getElementById("modal-login");
+const registroModal = document.getElementById("modal-registro");
+const linkAbrirRegistro = document.getElementById("link-abrir-registro");
+const linkAbrirLogin = document.getElementById("link-abrir-login");
+
+/* ----- abrir por botones del nav (data-open="id-del-modal") ----- */
+botonesAbrir.forEach(btn => {
+  btn.addEventListener("click", (e) => {
+    const id = btn.getAttribute("data-open");
+    const m = document.getElementById(id);
+    if (!m) return;
+    abrirModal(m);
+  });
+});
+
+/* ----- cerrar por botones con data-close (o clase .cerrar-btn) ----- */
+botonesCerrar.forEach(btn => {
+  btn.addEventListener("click", (e) => {
+    const id = btn.getAttribute("data-close");
+    const m = id ? document.getElementById(id) : btn.closest("dialog");
+    if (!m) return;
+    cerrarModalConAnimacion(m);
+  });
+});
+
+/* ----- cambiar entre modales desde enlaces internos (con animación) ----- */
+linkAbrirRegistro.addEventListener("click", (e) => {
+  e.preventDefault();
+  cerrarModalConAnimacion(loginModal, () => abrirModal(registroModal));
+});
+
+linkAbrirLogin.addEventListener("click", (e) => {
+  e.preventDefault();
+  cerrarModalConAnimacion(registroModal, () => abrirModal(loginModal));
+});
+
+/* ----- cerrar con clic fuera del diálogo ----- */
+function onClickFuera(e, modal) {
+  const rect = modal.getBoundingClientRect();
+  const dentro = e.clientX >= rect.left && e.clientX <= rect.right &&
+                 e.clientY >= rect.top && e.clientY <= rect.bottom;
+  if (!dentro) cerrarModalConAnimacion(modal);
+}
+loginModal.addEventListener("click", (e) => onClickFuera(e, loginModal));
+registroModal.addEventListener("click", (e) => onClickFuera(e, registroModal));
+
+/* ----- prevenir que submit de formularios recargue página durante pruebas ----- */
+document.getElementById("loginForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  // aquí puedes hacer fetch() para autenticar o mostrar mensaje
+  cerrarModalConAnimacion(loginModal);
+});
+
+document.getElementById("registroForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  // aquí puedes enviar datos al backend
+  cerrarModalConAnimacion(registroModal);
+});
+</script>
 </body>
 </html>
