--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,7 @@
             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
             <li><a class="dropdown-item" href="inventario.html">Inventario</a></li>
             <li><a class="dropdown-item" href="compra.html">Compra</a></li>
+            <li><a class="dropdown-item" href="ventas.html"> ventas</a></li>
           </ul>
         </li>
 
