--- a/public/perfil.html
+++ b/public/perfil.html
@@ -103,6 +103,7 @@
             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
             <li><a class="dropdown-item" href="inventario.html">Inventario</a></li>
             <li><a class="dropdown-item" href="compra.html">Compra</a></li>
+            <li><a class="dropdown-item" href="ventas.html"> ventas</a></li>
           </ul>
         </li>
 
@@ -115,6 +116,43 @@
     </div>
   </div>
 </nav>
+
+<footer class="footer">
+  
+  <div class="wrapper">
+
+    <a href="#" class="icon facebook" name="acerca">
+      <div class="tooltip">Facebook</div>
+      <span><i class="fab fa-facebook-f"></i></span>
+    </a>
+
+    <a href="https://x.com/icedthiago" class="icon twitter">
+      <div class="tooltip">Twitter</div>
+      <span><i class="fab fa-twitter"></i></span>
+    </a>
+
+    <a href="https://www.instagram.com/1ced_thiag0" class="icon instagram">
+      <div class="tooltip">Instagram</div>
+      <span><i class="fab fa-instagram"></i></span>
+    </a>
+
+    <a href="https://github.com/Icedthiago" class="icon github">
+      <div class="tooltip">Github</div>
+      <span><i class="fab fa-github"></i></span>
+    </a>
+
+    <a href="#" class="icon youtube">
+      <div class="tooltip">Youtube</div>
+      <span><i class="fab fa-youtube"></i></span>
+    </a>
+
+  </div>
+
+  <br>
+
+  <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
+
+</footer>
     
     <div class="container">
 	<div class="snowflakes" aria-hidden="true">
