--- a/public/ventas.html
+++ b/public/ventas.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inventario-Admin</title>
-    	<link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <title>Ventas</title>
 </head>
 <body>
-    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<div class="header">
+    <div class="header">
     <h1 class="header h1">panaderia desesperanza</h1>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
@@ -124,48 +116,7 @@
   </div>
 </nav>
 
-    <div class="container">
-	<div class="snowflakes" aria-hidden="true">
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-	</div>
-    </div>
-
-    <footer class="footer">
+<footer class="footer">
   
   <div class="wrapper">
 
@@ -201,91 +152,5 @@
   <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
 
 </footer>
-
-<script>
-/* ----- configuración: tiempo de la animación (ms) ----- */
-const ANIM_MS = 300;
-
-/* ----- helpers de animación ----- */
-function abrirModal(modal) {
-  modal.classList.remove("cerrando");
-  // showModal puede tirar en navegadores que no soportan dialog nativo,
-  // pero asumimos compatibilidad moderna
-  modal.showModal();
-}
-
-function cerrarModalConAnimacion(modal, callback) {
-  modal.classList.add("cerrando");
-  setTimeout(() => {
-    try { modal.close(); } catch(e) {}
-    modal.classList.remove("cerrando");
-    if (typeof callback === "function") callback();
-  }, ANIM_MS);
-}
-
-/* ----- elementos ----- */
-const botonesAbrir = document.querySelectorAll("[data-open]");
-const botonesCerrar = document.querySelectorAll(".cerrar-btn");
-const loginModal = document.getElementById("modal-login");
-const registroModal = document.getElementById("modal-registro");
-const linkAbrirRegistro = document.getElementById("link-abrir-registro");
-const linkAbrirLogin = document.getElementById("link-abrir-login");
-
-/* ----- abrir por botones del nav (data-open="id-del-modal") ----- */
-botonesAbrir.forEach(btn => {
-  btn.addEventListener("click", (e) => {
-    const id = btn.getAttribute("data-open");
-    const m = document.getElementById(id);
-    if (!m) return;
-    abrirModal(m);
-  });
-});
-
-/* ----- cerrar por botones con data-close (o clase .cerrar-btn) ----- */
-botonesCerrar.forEach(btn => {
-  btn.addEventListener("click", (e) => {
-    const id = btn.getAttribute("data-close");
-    const m = id ? document.getElementById(id) : btn.closest("dialog");
-    if (!m) return;
-    cerrarModalConAnimacion(m);
-  });
-});
-
-/* ----- cambiar entre modales desde enlaces internos (con animación) ----- */
-linkAbrirRegistro.addEventListener("click", (e) => {
-  e.preventDefault();
-  cerrarModalConAnimacion(loginModal, () => abrirModal(registroModal));
-});
-
-linkAbrirLogin.addEventListener("click", (e) => {
-  e.preventDefault();
-  cerrarModalConAnimacion(registroModal, () => abrirModal(loginModal));
-});
-
-/* ----- cerrar con clic fuera del diálogo ----- */
-function onClickFuera(e, modal) {
-  const rect = modal.getBoundingClientRect();
-  const dentro = e.clientX >= rect.left && e.clientX <= rect.right &&
-                 e.clientY >= rect.top && e.clientY <= rect.bottom;
-  if (!dentro) cerrarModalConAnimacion(modal);
-}
-loginModal.addEventListener("click", (e) => onClickFuera(e, loginModal));
-registroModal.addEventListener("click", (e) => onClickFuera(e, registroModal));
-
-/* ----- prevenir que submit de formularios recargue página durante pruebas ----- */
-document.getElementById("loginForm").addEventListener("submit", (e) => {
-  e.preventDefault();
-  // aquí puedes hacer fetch() para autenticar o mostrar mensaje
-  cerrarModalConAnimacion(loginModal);
-});
-
-document.getElementById("registroForm").addEventListener("submit", (e) => {
-  e.preventDefault();
-  // aquí puedes enviar datos al backend
-  cerrarModalConAnimacion(registroModal);
-});
-</script>
-
-	<script src="script.js"></script>
 </body>
 </html>
