--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
+<link rel="icon" href="https://www.flaticon.es/iconos-gratis/navidad" type="image/x-icon">
 
 </head>
 <body>
