--- a/public/index.html
+++ b/public/index.html
@@ -270,7 +270,7 @@ L.marker([19.362349, -99.270401]).addTo(map)
   <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
 
 </footer>
-	<script src="script.js"></script>
+	<script src="/public/script.js"></script>
 <script>
 /* ----- configuración: tiempo de la animación (ms) ----- */
 const ANIM_MS = 300;
