--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,16 @@
   <h2>Inicio de Sesión</h2>
 
   <form id="loginForm">
-    <label for="login-email">Correo electrónico:</label>
-    <input type="email" id="login-email" name="email" required><br><br>
+  <label for="login-email">Correo electrónico:</label>
+  <input type="email" id="login-email" name="email" required>
 
-    <label for="login-password">Contraseña:</label>
-    <input type="password" id="login-password" name="password" required><br><br>
+  <label for="login-password">Contraseña:</label>
+  <input type="password" id="login-password" name="password" required minlength="6">
 
-    <button type="submit">Ingresar</button>
-  </form>
+  <button type="submit">Ingresar</button>
+
+  <p id="login-error" class="error"></p>
+</form>
 
   <p style="margin-top: 10px;">
     ¿No tienes cuenta?
@@ -70,23 +72,21 @@
   <h2>Registro de Usuario</h2>
 
   <form id="registroForm">
-    <label for="reg-nombre">Nombre:</label>
-    <input type="text" id="reg-nombre" name="nombre" required><br><br>
+  <input type="text" id="reg-nombre" placeholder="Nombre" required>
 
-    <label for="reg-email">Correo electrónico:</label>
-    <input type="email" id="reg-email" name="email" required><br><br>
+  <input type="email" id="reg-email" placeholder="Correo" required>
 
-    <label for="reg-password">Contraseña:</label>
-    <input type="password" id="reg-password" name="password" required><br><br>
+  <input type="password" id="reg-password" placeholder="Contraseña" required minlength="6">
 
-    <label for="reg-rol">Rol:</label>
-    <select id="reg-rol" name="rol">
-      <option value="cliente">Cliente</option>
-      <option value="admin">Admin</option>
-    </select><br><br>
+  <select id="reg-rol" required>
+    <option value="cliente">Cliente</option>
+    <option value="admin">Admin</option>
+  </select>
 
-    <button type="submit">Registrar</button>
-  </form>
+  <button type="submit">Registrarse</button>
+
+  <p id="msg-error" style="color: red"></p>
+</form>
 
   <p style="margin-top: 10px;">
     ¿Ya tienes cuenta?
