--- a/public/perfil.html
+++ b/public/perfil.html
@@ -280,5 +280,6 @@ document.getElementById("registroForm").addEventListener("submit", (e) => {
   cerrarModalConAnimacion(registroModal);
 });
 </script>
+<script src="script.js"></script>
 </body>
 </html>
