--- a/public/inventario.html
+++ b/public/inventario.html
@@ -36,13 +36,22 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 <!-- BOTONES EN NAV (abre directamente cada modal) -->
-<li class="nav-item">
+<li class="nav-item" id="nav-login-btn">
   <button class="btn-modal" data-open="modal-login" type="button">Inicio de sesión</button>
 </li>
-<li class="nav-item">
+<li class="nav-item" id="nav-registro-btn">
   <button class="btn-modal" data-open="modal-registro" type="button">Registrar</button>
 </li>
 
+<!-- Texto visible cuando el usuario está logueado -->
+<li class="nav-item d-none" id="nav-usuario">
+  <span class="nav-link">Hola, <b id="nav-usuario-nombre"></b> 👋</span>
+</li>
+
+<!-- Botón de cerrar sesión (se muestra cuando hay sesión) -->
+<li class="nav-item d-none" id="nav-logout">
+  <button class="btn btn-danger" id="logoutBtn">Cerrar sesión</button>
+</li>
 <!-- MODAL LOGIN (NO anidar) -->
 <dialog id="modal-login">
   <h2>Inicio de Sesión</h2>
@@ -203,80 +212,12 @@
 
 </footer>
 
-<script>
-/* ----- configuración: tiempo de la animación (ms) ----- */
-const ANIM_MS = 300;
-
-/* ----- helpers de animación ----- */
-function abrirModal(modal) {
-  modal.classList.remove("cerrando");
-  // showModal puede tirar en navegadores que no soportan dialog nativo,
-  // pero asumimos compatibilidad moderna
-  modal.showModal();
-}
-
-function cerrarModalConAnimacion(modal, callback) {
-  modal.classList.add("cerrando");
-  setTimeout(() => {
-    try { modal.close(); } catch(e) {}
-    modal.classList.remove("cerrando");
-    if (typeof callback === "function") callback();
-  }, ANIM_MS);
-}
-
-/* ----- elementos ----- */
-const botonesAbrir = document.querySelectorAll("[data-open]");
-const botonesCerrar = document.querySelectorAll(".cerrar-btn");
-const loginModal = document.getElementById("modal-login");
-const registroModal = document.getElementById("modal-registro");
-const linkAbrirRegistro = document.getElementById("link-abrir-registro");
-const linkAbrirLogin = document.getElementById("link-abrir-login");
-
-/* ----- abrir por botones del nav (data-open="id-del-modal") ----- */
-botonesAbrir.forEach(btn => {
-  btn.addEventListener("click", (e) => {
-    const id = btn.getAttribute("data-open");
-    const m = document.getElementById(id);
-    if (!m) return;
-    abrirModal(m);
-  });
-});
-
-/* ----- cerrar por botones con data-close (o clase .cerrar-btn) ----- */
-botonesCerrar.forEach(btn => {
-  btn.addEventListener("click", (e) => {
-    const id = btn.getAttribute("data-close");
-    const m = id ? document.getElementById(id) : btn.closest("dialog");
-    if (!m) return;
-    cerrarModalConAnimacion(m);
-  });
-});
-
-/* ----- cambiar entre modales desde enlaces internos (con animación) ----- */
-linkAbrirRegistro.addEventListener("click", (e) => {
-  e.preventDefault();
-  cerrarModalConAnimacion(loginModal, () => abrirModal(registroModal));
-});
-
-linkAbrirLogin.addEventListener("click", (e) => {
-  e.preventDefault();
-  cerrarModalConAnimacion(registroModal, () => abrirModal(loginModal));
-});
-
-/* ----- cerrar con clic fuera del diálogo ----- */
-function onClickFuera(e, modal) {
-  const rect = modal.getBoundingClientRect();
-  const dentro = e.clientX >= rect.left && e.clientX <= rect.right &&
-                 e.clientY >= rect.top && e.clientY <= rect.bottom;
-  if (!dentro) cerrarModalConAnimacion(modal);
-}
-loginModal.addEventListener("click", (e) => onClickFuera(e, loginModal));
-registroModal.addEventListener("click", (e) => onClickFuera(e, registroModal));
-
-/* ----- prevenir que submit de formularios recargue página durante pruebas ----- */
+</script>
+  <script src="script.js"></script>
 
 </script>
 
-	<script src="script.js"></script>
+</script>
+  <script src="script.js"></script>
 </body>
 </html>
