--- a/public/ventas.html
+++ b/public/ventas.html
@@ -35,11 +35,21 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 <!-- BOTONES EN NAV (abre directamente cada modal) -->
-<li class="nav-item">
+<li class="nav-item" id="nav-login-btn">
   <button class="btn-modal" data-open="modal-login" type="button">Inicio de sesión</button>
 </li>
-<li class="nav-item">
+<li class="nav-item" id="nav-registro-btn">
   <button class="btn-modal" data-open="modal-registro" type="button">Registrar</button>
+</li>
+
+<!-- Texto visible cuando el usuario está logueado -->
+<li class="nav-item d-none" id="nav-usuario">
+  <span class="nav-link">Hola, <b id="nav-usuario-nombre"></b> 👋</span>
+</li>
+
+<!-- Botón de cerrar sesión (se muestra cuando hay sesión) -->
+<li class="nav-item d-none" id="nav-logout">
+  <button class="btn btn-danger" id="logoutBtn">Cerrar sesión</button>
 </li>
 
 <!-- MODAL LOGIN (NO anidar) -->
@@ -160,6 +170,6 @@
   <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
 
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
-<script src="script.js"></script>
