--- a/public/index.html
+++ b/public/index.html
@@ -120,9 +120,9 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
-            <li><a class="dropdown-item" href="inventario.html">Inventario</a></li>
             <li><a class="dropdown-item" href="compra.html">Compra</a></li>
-            <li><a class="dropdown-item" href="ventas.html"> ventas</a></li>
+            <li><a class="dropdown-item admin-only" href="inventario.html">Inventario</a></li>
+            <li><a class="dropdown-item admin-only" href="ventas.html">Ventas</a></li>
           </ul>
         </li>
 
