--- a/public/perfil.html
+++ b/public/perfil.html
@@ -42,12 +42,12 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Menú</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
-              <li><a class="dropdown-item" href="inventario.html">Inventario</a></li>
-              <li><a class="dropdown-item" href="compra.html">Compra</a></li>
-              <li><a class="dropdown-item" href="ventas.html">ventas</a></li>
-            </ul>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+            <li><a class="dropdown-item" href="compra.html">Compra</a></li>
+            <li><a class="dropdown-item admin-only" href="inventario.html">Inventario</a></li>
+            <li><a class="dropdown-item admin-only" href="ventas.html">Ventas</a></li>
+          </ul>
           </li>
         </ul>
       </div>
