--- a/public/inventario.html
+++ b/public/inventario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inventario-Admin</title>
+    <title>inventario</title>
     	<link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
@@ -14,8 +14,7 @@
 <link rel="icon" href="https://www.flaticon.es/iconos-gratis/navidad" type="image/x-icon">
 </head>
 <body>
-    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<div class="header">
+    <div class="header">
     <h1 class="header h1">panaderia desesperanza</h1>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
@@ -52,6 +51,7 @@
 <li class="nav-item d-none" id="nav-logout">
   <button class="btn btn-danger" id="logoutBtn">Cerrar sesión</button>
 </li>
+
 <!-- MODAL LOGIN (NO anidar) -->
 <dialog id="modal-login">
   <h2>Inicio de Sesión</h2>
@@ -133,85 +133,8 @@
     </div>
   </div>
 </nav>
-<button class="btn-modal admin-only" onclick="dialogProducto.showModal()">Agregar producto</button>
-<dialog id="dialogProducto" class="modal">
-    <h2>Agregar producto</h2>
 
-    <form id="formProducto" enctype="multipart/form-data">
-
-        <label>Nombre:</label>
-        <input id="p-nombre" required />
-
-        <label>Descripción:</label>
-        <textarea id="p-descripcion" required></textarea>
-
-        <label>Precio:</label>
-        <input type="number" id="p-precio" required step="0.01" min="0" />
-
-        <label>Stock:</label>
-        <input type="number" id="p-stock" required min="0" />
-
-        <label>Temporada:</label>
-        <select id="p-temporada" required>
-            <option value="">Selecciona</option>
-            <option value="Navidad">Navidad</option>
-            <option value="DiaMuertos">Día de Muertos</option>
-            <option value="Invierno">Invierno</option>
-        </select>
-
-        <label>Imagen:</label>
-        <input type="file" id="p-imagen" accept="image/*" />
-
-        <p id="producto-error" style="color:red"></p>
-
-        <button class="btn-modal" type="submit">Guardar</button>
-        <button class="btn-modal cancelar" type="button" onclick="dialogProducto.close()">Cancelar</button>
-    </form>
-</dialog>
-
-
-    <div class="container">
-	<div class="snowflakes" aria-hidden="true">
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-		<div class="snowflake">
-			❅
-		</div>
-		<div class="snowflake">
-			❆
-		</div>
-	</div>
-    </div>
-
-    <footer class="footer">
+<footer class="footer">
   
   <div class="wrapper">
 
@@ -247,6 +170,6 @@
   <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
 
 </footer>
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
