--- a/public/inventario.html
+++ b/public/inventario.html
@@ -134,6 +134,58 @@
   </div>
 </nav>
 
+<button class="btn-modal" data-open="add-producto" type="button">Agregar Producto</button>
+
+<dialog id="add-producto">
+<h2>Agregar Producto</h2>
+
+<form id="formAgregarProducto">
+  <label for="nombreProducto">Nombre:</label>
+  <input type="text" id="nombreProducto" name="nombre" required><br><br>
+
+  <label for="descripcionProducto">Descripción:</label>
+  <input type="text" id="descripcionProducto" name="descripcion" required><br><br>
+
+  <label for="precioProducto">Precio:</label>
+  <input type="number" id="precioProducto" name="precio" required><br><br>
+
+  <label for="stockProducto">Stock:</label>
+  <input type="number" id="stockProducto" name="stock" required><br><br>
+
+  <label for="temporadaProducto">Temporada:</label>
+  <input type="text" id="temporadaProducto" name="temporada" required><br><br>
+
+  <label for="imagenProducto">Imagen:</label>
+  <input type="file" id="imagenProducto" name="imagen" accept="image/*"><br><br>
+  <button type="submit">Agregar</button>
+  <button type="button" data-close="add-producto">Cancelar</button>
+</form>
+</dialog>
+
+<!---tabla de productos-->
+<div class="container">
+    <section class="mt-4">
+      <h2>Inventario de productos</h2>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Imagen</th>
+              <th>Nombre</th>
+              <th>Descripción</th>
+              <th>Precio</th>
+              <th>Stock</th>
+              <th>Temporada</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="tbodyProductos"></tbody>
+        </table>
+      </div>
+    </section>
+</div>
+
 <footer class="footer">
   
   <div class="wrapper">
@@ -170,6 +222,89 @@
   <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
 
 </footer>
+<script>
+/* ----- configuración: tiempo de la animación (ms) ----- */
+const ANIM_MS = 300;
+
+/* ----- helpers de animación ----- */
+function abrirModal(modal) {
+  modal.classList.remove("cerrando");
+  // showModal puede tirar en navegadores que no soportan dialog nativo,
+  // pero asumimos compatibilidad moderna
+  modal.showModal();
+}
+
+function cerrarModalConAnimacion(modal, callback) {
+  modal.classList.add("cerrando");
+  setTimeout(() => {
+    try { modal.close(); } catch(e) {}
+    modal.classList.remove("cerrando");
+    if (typeof callback === "function") callback();
+  }, ANIM_MS);
+}
+
+/* ----- elementos ----- */
+const botonesAbrir = document.querySelectorAll("[data-open]");
+const botonesCerrar = document.querySelectorAll(".cerrar-btn");
+const loginModal = document.getElementById("modal-login");
+const registroModal = document.getElementById("modal-registro");
+const linkAbrirRegistro = document.getElementById("link-abrir-registro");
+const linkAbrirLogin = document.getElementById("link-abrir-login");
+
+/* ----- abrir por botones del nav (data-open="id-del-modal") ----- */
+botonesAbrir.forEach(btn => {
+  btn.addEventListener("click", (e) => {
+    const id = btn.getAttribute("data-open");
+    const m = document.getElementById(id);
+    if (!m) return;
+    abrirModal(m);
+  });
+});
+
+/* ----- cerrar por botones con data-close (o clase .cerrar-btn) ----- */
+botonesCerrar.forEach(btn => {
+  btn.addEventListener("click", (e) => {
+    const id = btn.getAttribute("data-close");
+    const m = id ? document.getElementById(id) : btn.closest("dialog");
+    if (!m) return;
+    cerrarModalConAnimacion(m);
+  });
+});
+
+/* ----- cambiar entre modales desde enlaces internos (con animación) ----- */
+linkAbrirRegistro.addEventListener("click", (e) => {
+  e.preventDefault();
+  cerrarModalConAnimacion(loginModal, () => abrirModal(registroModal));
+});
+
+linkAbrirLogin.addEventListener("click", (e) => {
+  e.preventDefault();
+  cerrarModalConAnimacion(registroModal, () => abrirModal(loginModal));
+});
+
+/* ----- cerrar con clic fuera del diálogo ----- */
+function onClickFuera(e, modal) {
+  const rect = modal.getBoundingClientRect();
+  const dentro = e.clientX >= rect.left && e.clientX <= rect.right &&
+                 e.clientY >= rect.top && e.clientY <= rect.bottom;
+  if (!dentro) cerrarModalConAnimacion(modal);
+}
+loginModal.addEventListener("click", (e) => onClickFuera(e, loginModal));
+registroModal.addEventListener("click", (e) => onClickFuera(e, registroModal));
+
+/* ----- prevenir que submit de formularios recargue página durante pruebas ----- */
+document.getElementById("loginForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  // aquí puedes hacer fetch() para autenticar o mostrar mensaje
+  cerrarModalConAnimacion(loginModal);
+});
+
+document.getElementById("registroForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  // aquí puedes enviar datos al backend
+  cerrarModalConAnimacion(registroModal);
+});
+</script>
 <script src="script.js"></script>
 </body>
 </html>
