--- a/public/inventario.html
+++ b/public/inventario.html
@@ -139,7 +139,7 @@
 <dialog id="add-producto">
 <h2>Agregar Producto</h2>
 
-<form id="formAgregarProducto">
+<form id="formAgregarProducto" enctype="multipart/form-data">
   <label for="nombreProducto">Nombre:</label>
   <input type="text" id="nombreProducto" name="nombre" required><br><br>
 
