--- a/public/inventario.html
+++ b/public/inventario.html
@@ -168,8 +168,49 @@
   <label for="imagenProducto">Imagen:</label>
   <input type="file" id="imagenProducto" name="imagen" accept="image/*"><br><br>
   <button type="submit">Agregar</button>
-  <button type="button" data-close="add-producto">Cancelar</button>
+  <button class="btn-modal cerrar-btn btn-x" data-close="modal-login" type="button">X</button>
 </form>
+</dialog>
+
+<dialog id="edit-producto">
+  <h2>Editar Producto</h2>
+
+  <form id="formEditarProducto" enctype="multipart/form-data">
+    
+    <input type="hidden" id="edit-id" name="id_producto">
+
+    <label>Nombre:</label>
+    <input type="text" id="edit-nombre" name="nombre" required><br><br>
+
+    <label>Descripción:</label>
+    <input type="text" id="edit-descripcion" name="descripcion" required><br><br>
+
+    <label>Precio:</label>
+    <input type="number" id="edit-precio" name="precio" required><br><br>
+
+    <label>Stock:</label>
+    <input type="number" id="edit-stock" name="stock" required><br><br>
+
+    <label>Temporada:</label>
+    <select id="edit-temporada" name="temporada" required>
+      <option value="De todo el año">De todo el año</option>
+      <option value="Navideño">Navideño</option>
+      <option value="Halloween">Halloween</option>
+      <option value="Día de muertos">Día de muertos</option>
+      <option value="Día de reyes">Día de reyes</option>
+      <option value="San Valentín">San Valentín</option>
+      <option value="Pascua">Pascua</option>
+    </select>
+    <br><br>
+
+    <label>Imagen (opcional):</label>
+    <input type="file" id="edit-imagen" name="imagen" accept="image/*"><br>
+    <small>Si no eliges una imagen, se mantiene la actual.</small><br><br>
+
+    <button type="submit">Guardar Cambios</button>
+    <button class="btn-modal cerrar-btn btn-x" data-close="edit-producto" type="button">X</button>
+
+  </form>
 </dialog>
 
 <!---tabla de productos-->
