--- a/public/inventario.html
+++ b/public/inventario.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <div class="container-fluid">
 
-    <a class="navbar-brand" href="#">Panadería</a>
+    <a class="navbar-brand" href="index.html">Panadería</a>
 
     <!-- botón hamburguesa -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -133,8 +133,8 @@
     </div>
   </div>
 </nav>
-
-<button class="btn-modal" data-open="add-producto" type="button">Agregar Producto</button>
+<br>  
+<button class="btn-modal  btn btn-success" data-open="add-producto" type="button">Agregar Producto</button>
 
 <dialog id="add-producto">
 <h2>Agregar Producto</h2>
