--- a/public/inventario.html
+++ b/public/inventario.html
@@ -64,6 +64,8 @@
     <input type="password" id="login-password" name="password" required><br><br>
 
     <button type="submit">Ingresar</button>
+
+    <p id="login-error" style="color: #ffcccc; margin-top: 10px;"></p>
   </form>
 
   <p style="margin-top: 10px;">
@@ -95,6 +97,8 @@
     </select><br><br>
 
     <button type="submit">Registrar</button>
+
+    <p id="msg-error" style="color: #ffcccc; margin-top: 10px;"></p>
   </form>
 
   <p style="margin-top: 10px;">
