--- a/public/compra.html
+++ b/public/compra.html
@@ -65,6 +65,8 @@
     <input type="password" id="login-password" name="password" required><br><br>
 
     <button type="submit">Ingresar</button>
+
+    <p id="login-error" style="color: #ffcccc; margin-top: 10px;"></p>
   </form>
 
   <p style="margin-top: 10px;">
@@ -96,6 +98,8 @@
     </select><br><br>
 
     <button type="submit">Registrar</button>
+
+    <p id="msg-error" style="color: #ffcccc; margin-top: 10px;"></p>
   </form>
 
   <p style="margin-top: 10px;">
