--- a/public/perfil.html
+++ b/public/perfil.html
@@ -88,6 +88,7 @@
       <label for="login-password">Contraseña:</label>
       <input type="password" id="login-password" name="password" required><br><br>
       <button type="submit">Ingresar</button>
+      <p id="login-error" style="color: #ffcccc; margin-top: 10px;"></p>
     </form>
     <p style="margin-top: 10px;">¿No tienes cuenta? <a href="#" id="link-abrir-registro">Regístrate aquí</a></p>
     <button class="btn-modal cerrar-btn btn-x" data-close="modal-login" type="button">X</button>
@@ -105,6 +106,7 @@
       <label for="reg-rol">Rol:</label>
       <select id="reg-rol" name="rol"><option value="cliente">Cliente</option><option value="admin">Admin</option></select><br><br>
       <button type="submit">Registrar</button>
+      <p id="msg-error" style="color: #ffcccc; margin-top: 10px;"></p>
     </form>
     <p style="margin-top: 10px;">¿Ya tienes cuenta? <a href="#" id="link-abrir-login">Inicia sesión</a></p>
     <button class="btn-modal cerrar-btn btn-x" data-close="modal-registro" type="button">X</button>
