--- a/public/inventario.html
+++ b/public/inventario.html
@@ -278,6 +278,7 @@
 
 </footer>
 <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 /* ----- configuración: tiempo de la animación (ms) ----- */
 const ANIM_MS = 300;
